# CIO-Shield

./: .env.example  .gitignore  .gitmessage-remediation.txt  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  USAGE.md  bootstrap.sh  docker-compose.yml  pyproject.toml  run.sh  run_demo.sh  validate-user-journey.sh  verify-mitigations.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: ADVERSARIAL_TEST_MATRIX.md  ARCH_OPTIONS.md  BLOG_CIO_II_LAUNCH.md  BUILD_PLAN_SHOWPIECE.md  COMPLEXITY_BUDGET.md  CONTRACTS.md  CORPORATE_DEPLOYMENT_GUIDE.md  CORPORATE_SHIELD_BUILD_PLAN.md  DEMO_SCRIPT.md  DEPENDENCY_TRIBUNAL.md  FEATURE_MATRIX.md  GIT_WORKFLOW.md  IMPLEMENTATION_ROADMAP.md  PRD.md  PRODUCT_CONTRACT.md  REAL_WORLD_VALIDATION_PLAN.md  STARTUP_PROCEDURES.md  TESTING_GUIDE.md  TEST_PLAN_FEATURE_MATRIX.md  X_ANNOUNCEMENT.md  index.html
helpers/com.cognitiveio.audit-helper/: Info.plist  Package.swift
helpers/com.cognitiveio.audit-helper/Sources/: AuditCrypto.swift  AuditWriter.swift  ClipboardMonitor.swift  XPCProtocol.swift  main.swift
helpers/launchd/: com.cognitiveio.agent.plist  com.cognitiveio.audit.plist
src/cognitiveio/: cli.py  config.py  platform_requirements.py
src/cognitiveio/ai/: fm_arbiter.py  fm_secret_scanner.py
src/cognitiveio/audit/: __init__.py  events.py  writer.py
src/cognitiveio/context/: app_context.py  profiles.py
src/cognitiveio/core/: __init__.py  decision_engine.py  undo_stack.py
src/cognitiveio/demo/: demo_episodes.json  demo_runner.py
src/cognitiveio/evidence/: health_card.py  metrics.py  privacy_ledger.py  report_generator.py
src/cognitiveio/experiments/: __init__.py  ab_testing.py
src/cognitiveio/memory/: language_assets.py  local_store.py
tests/: conftest.py  test_ab_testing.py  test_app_context.py  test_audit_writer.py  test_backfill.py  test_cli.py  test_clipboard_shield.py  test_clipboard_shield_enhanced.py  test_compliance_export.py  test_config.py  test_corporate_policy.py  test_demo_runner.py  test_fm_arbiter_unit.py  test_fm_live.py  test_fm_secret_scanner.py  test_invariants.py  test_local_store_extended.py  test_mac_bridge.py  test_mac_bridge_clipboard.py  test_mac_live.py  test_memory_lifecycle.py  test_no_network.py  test_platform_requirements.py  test_profiles.py  test_protected_context.py  test_reporting.py  test_retention_prune.py  test_risk_scoring.py  test_runtime_flow.py  test_session_profile.py  test_suggestion_presenter.py  test_text_apply_policy.py  test_undo_stack.py  test_vault_crypto.py  test_vault_resolver_extended.py
tests/language/: test_concept_lexicon.py  test_language_assets_seed.py  test_phrase_memory.py
tests/security/: test_encrypted_store.py  test_secret_alias_registry.py  test_secret_alias_resolution.py  test_secret_redaction.py
(+18 files in other folders)
