[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cio-ii"
version = "0.2.0"
description = "Intent-preserving typing augmentation (local-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]
mac = [
  "pyobjc-core>=10.0",
  "pyobjc-framework-Cocoa>=10.0",
  "pyobjc-framework-Quartz>=10.0",
  "pyobjc-framework-ApplicationServices>=10.0",
]
# Optional: install on macOS when you want Apple FM
apple_fm = [
  "python-apple-fm-sdk>=0.1.0",
]

[project.scripts]
cio-ii = "cognitiveio.cli:app"
cognitiveio = "cognitiveio.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
