[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cio-ii"
version = "0.2.0"
description = "Intent-preserving typing augmentation (local-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "rich>=13.5.2,<13.6",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==0.23.8",
  "pytest-cov>=5.0.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
]
mac = [
  "pyobjc-core>=10.0",
  "pyobjc-framework-Cocoa>=10.0",
  "pyobjc-framework-Quartz>=10.0",
  "pyobjc-framework-ApplicationServices>=10.0",
]
# Optional: install on macOS when you want Apple FM
apple_fm = [
  "python-apple-fm-sdk>=0.1.0",
]

[project.scripts]
cio-ii = "cognitiveio.cli:app"
cognitiveio = "cognitiveio.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "live_fm: tests that require an available Apple FM SDK/runtime",
  "live_mac: tests that require macOS accessibility/event-tap environment",
]

[tool.coverage.run]
source = ["cognitiveio"]
omit = [
  "*/runtime/mac_bridge.py",
  "*/runtime/ax_geometry.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["Cocoa", "Quartz", "apple_fm_sdk", "ApplicationServices", "sqlcipher3"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["objc", "objc.*"]
ignore_missing_imports = true
